اجراء بعض التحسينات

--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
     <div class="landing">
         <div class="container">
             <div class="box-kids">
-                <img src="img/carousel-1.jpg" alt="">
-                <div class="overlay">
+                <!-- <img src="img/carousel-1.jpg" alt=""> -->
+                <div class="text">
                     <h2>Man Fasahion</h2>
                     <p>Lorem rebum magna amet lorem magna erat diam stet. Sadips duo stet amet amet ndiam elitr ipsum diam</p>
                     <a href="#">Shop Now</a>
@@ -117,6 +117,7 @@
                         <li></li>
                     </ul>
                 </div>
+                <div class="overlay"></div>
             </div>
             <div class="offer">
                 <div class="box-offer">
@@ -450,25 +451,6 @@
                     </ul>
                 </div>
             </div>
-            <div class="offer">
-                <div class="box-offer">
-                    <img src="img/offer-02.jpg" alt="">
-                    <div class="overlay">
-                        <p>Save 20%</p>
-                        <h3>Special Offer</h3>
-                        <a href="#">Shop Now</a>
-                    </div>
-                </div>
-                <div class="box-offer">
-                    <img src="img/hijab.jpg" alt="">
-                    <div class="overlay">
-                        <p>Save 20%</p>
-                        <h3>Special Offer</h3>
-                        <a href="#">Shop Now</a>
-                    </div>
-                </div>
-            </div>
-        </div>
     </div>
     <!-- End Products -->
     <!-- Start Gallerys -->
